# snake-cpp

./: CMakeLists.txt  README.md
include/app/: application.hpp
include/common/: config.hpp  types.hpp
include/core/: game.hpp  snake.hpp  world.hpp
include/interfaces/: renderer.hpp
include/render/: game_view.hpp  sfml_renderer.hpp
src/: main.cpp
src/core/: game.cpp  snake.cpp  world.cpp
src/render/: sfml_renderer.cpp
